added get api key request
